--- a/GotchiTaMm.csproj
+++ b/GotchiTaMm.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="sdl2_ttf.nuget" Version="2.20.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="blue_screen.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
