Improved placement of images and replaced the type with a new PackedImage struct.

--- a/GotchiTaMm.csproj
+++ b/GotchiTaMm.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="blue_screen.ttf">
+    <None Update="BlueScreen.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="gfx\Attention.png">
