Tweaked the text rendering and input system to take in user input and place it on the screen. This made me realize I need to refactor some stuff...

--- a/GotchiTaMm.csproj
+++ b/GotchiTaMm.csproj
@@ -43,6 +43,9 @@
     <None Update="gfx\Training.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="RainyHearts.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
