--- a/GotchiTaMm.csproj
+++ b/GotchiTaMm.csproj
@@ -37,6 +37,9 @@
     <None Update="gfx\Medicine.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="gfx\Selector.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="gfx\Status.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
